force-app/main/default/objects/Job_Alert__c/Job_Alert__c.object-meta.xml
<CustomObject>
    <label>Job Alert</label>
    <nameField>
        <displayFormat>JA- {000000}</displayFormat>
        <label>Job Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>