force-app/main/default/objects/Job_Alert__c/fields/Alert_Name__c.field-meta.xml
<CustomField>
    <fullName>Alert_Name__c</fullName>
    <label>Alert Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>