force-app/main/default/objects/Job_Alert__c/fields/Location_Text__c.field-meta.xml
<CustomField>
    <fullName>Location_Text__c</fullName>
    <label>Location Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>